src/test/testData/parser/good/FlowIfSingle.basic
If A=2+dim(L1
2->A
If B:3->C