src/test/testData/parser/bad/FlowIfSingle.basic
If
2->A
If A=2,
2->A